--- a/App/myapp/src/App.css
+++ b/App/myapp/src/App.css
@@ -1057,8 +1057,8 @@ footer a.btn{
     --header-stylized-background: url("../public/img/stylized-background1.svg");
     --body-stylized-background: url("../public/img/TRUC\ COOL.svg");
     --dark-room-logo: url("../public/img/DARK ROOM.png");
-    --battle-room-logo: url("../public/img/");
-    --creative-room-logo: url("../public/img/");
+    --battle-room-logo: url("../public/img/Battle_room_phone_logo.png");
+    --creative-room-logo: url("../public/img/CREATIVE ROOM.svg");
     --bg-color: #fff;
 }
 
@@ -1066,6 +1066,8 @@ footer a.btn{
     --header-stylized-background: url("../public/img/stylized-background2.svg");
     --body-stylized-background: url("../public/img/body-stylized-background2.svg");
     --dark-room-logo: url('../public/img/DARK ROOM (1).svg');
+    --battle-room-logo: url("../public/img/Battle_room_phone_dark.png");
+    --creative-room-logo: url("../public/img/CREATIVE ROOM.svg");
     --bg-color: #131313;
 }
 
