--- a/App/myapp/src/App.css
+++ b/App/myapp/src/App.css
@@ -810,9 +810,18 @@ footer .text-center{
     justify-content: space-between;
 }
 
+footer .footer-left-part{
+    align-self: center;
+}
+
+footer .footer-mid-part{
+    align-self: center;
+}
+
 footer .footer-right-part{
     display: flex;
     flex-direction: row;
+    align-self: center;
 }
 
 footer .split{
@@ -877,10 +886,6 @@ footer a.btn{
     border: none;
 }
 
-footer a:active{
-    transform: none;
-    transition: none;
-}
 
 /** DROP-DOWN EDITS **/
 
