footer + news fix

--- a/App/myapp/src/App.css
+++ b/App/myapp/src/App.css
@@ -1,6 +1,5 @@
 /** GENERAL **/
 
-
 .example {
     -ms-overflow-style: none;
     scrollbar-width: none;
@@ -16,6 +15,9 @@
     box-sizing: border-box;
 }
 
+body{
+    min-height: 100vh !important;
+}
 
 
 h1, h2, h3, h4, h5, h6, .amiko-bold {
@@ -424,7 +426,6 @@ link {
     width: 100%;
     border: none;
     margin-top: 1%;
-
     font-size: 20px;
     background-color: white;
     
@@ -496,7 +497,6 @@ iframe {
     background-image: url("../public/img/news_background.svg");
     background-size: cover;
     background-repeat: no-repeat;
-    height: 3000px;
     padding-top: 10%;
 
 }
