--- a/App/myapp/src/App.css
+++ b/App/myapp/src/App.css
@@ -20,7 +20,8 @@
 
 h1, h2, h3, h4, h5, h6, .amiko-bold {
     font-family: 'Amiko', sans-serif;
-    font-weight: 700 !important;
+    font-weight: 700 ;
+
     color: #3B4040;
 }
 
@@ -446,6 +447,81 @@ link {
 .reservation-all{
     background-image: url("../public/img/image\ 7.svg");
     color: white;
+    text-align: center;
+    margin-top: 5%;
+}
+
+.reservation-all .img-reserver{
+    margin-top: 5%;
+}
+
+.reservation-all h3{
+    font-family: Poppins;
+    font-weight: 100;
+    color: white;
+    font-size: 50px;
+}
+
+.reservation-all h4{
+    font-family: Poppins;
+    font-weight: 200;
+    color: white;
+    font-size: 40px;
+}
+
+.reservation-all p{
+    font-family: Poppins;
+    font-weight: 150;
+    color: white;
+    font-size: 20px;
+}
+.reservation-all .p1{
+    font-size: 15px;
+}
+
+.button-tarif{
+    display: inline-flex;
+}
+
+.button-tarif button{
+    background: none;
+    border: none;
+    font-size: 40px;
+    color: white;
+
+}
+
+.button-tarif .button{
+
+    margin-left: -50%;
+}
+
+.button-tarif p{
+    font-size: 30px;
+    margin: 50%;
+
+}
+
+.tarif-room{
+    text-align: justify;
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 5%;
+}
+
+
+
+.tarif-rooms{
+    margin-left: 35px;
+    text-align: center;
+}
+
+.tarif-rooms img{
+    margin-bottom: 5%;
+}
+
+.tab-reservation{
+    background-color: #000;
 }
 
 
