--- a/App/myapp/src/App.css
+++ b/App/myapp/src/App.css
@@ -190,6 +190,15 @@ link {
     transition: 1.5s;
 }
 
+.banner-wrapper.battle-room {
+    background-color: #CDFFF3;
+    transition: 1.5s;
+}
+
+.banner-wrapper.creative-room {
+    background-color: #F2F2F2;
+}
+
 .banner-wrapper .banner-flex {
     display: inline-flex;
     justify-content: space-between;
@@ -231,6 +240,16 @@ link {
 
 .banner-flex .banner-bubble .image-wrapper.dark-room {
     border-color: #430000;
+    transition: 1.5s;
+}
+
+.banner-flex .banner-bubble .image-wrapper.battle-room {
+    border-color: #798F8B;
+    transition: 1.5s;
+}
+
+.banner-flex .banner-bubble .image-wrapper.creative-room {
+    border-color: #771261;
     transition: 1.5s;
 }
 
@@ -1082,21 +1101,25 @@ footer a:active{
 
 .experiences {
     --header-stylized-background: url("../public/img/stylized-background1.svg");
-    --body-stylized-background: url("../public/img/TRUC\ COOL.svg");
+    --body-stylized-background: url("../public/img/Light_body.svg");
     --dark-room-logo: url("../public/img/DARK ROOM.png");
     --battle-room-logo: url("../public/img/BATTLE ROOM.svg");
     --creative-room-logo: url("../public/img/CREATIVE ROOM.svg");
     --bg-color: #fff;
     --animation-duration: 1s;
+    --text-color: #646363;
+    --title-color: #3B4040;
 }
 
 .experiences.dark {
     --header-stylized-background: url("../public/img/stylized-background2.svg");
-    --body-stylized-background: url("../public/img/body-stylized-background2.svg");
+    --body-stylized-background: url("../public/img/Dark_body.svg");
     --dark-room-logo: url('../public/img/DARK ROOM (1).svg');
     --battle-room-logo: url("../public/img/BATTLE ROOM white.svg");
     --creative-room-logo: url("../public/img/CREATIVE.png");
     --bg-color: #131313;
+    --text-color: #fff;
+    --title-color: #fff;
 }
 
 @media screen and (max-width: 992px){
@@ -1110,10 +1133,12 @@ footer a:active{
 }
 .experiences.battle {
     --header-stylized-background: url("../public/img/stylized-background1.svg");
+    --body-stylized-background: url("../public/img/Battle_body.svg");
 }
 
 .experiences.creative {
     --header-stylized-background: url("../public/img/stylized-background3.svg");
+    --body-stylized-background: url("../public/img/Creative_body.svg");
 }
 
 .experiences .exp-header {
@@ -1149,10 +1174,23 @@ footer a:active{
 }
 
 .experiences .wrapper {
-    height: 1200px;
+    height: fit-content;
     background-image: var(--body-stylized-background);
     background-repeat: no-repeat;
     background-size: cover;
     background-color: var(--bg-color);
     transition: background-color var(--animation-duration), background-image var(--animation-duration);
+}
+
+.experiences h1, .experiences .h2 {
+    color: var(--title-color);
+    transition: var(--animation-duration);
+}
+
+.wrapper h1 {
+    text-transform: uppercase;
+}
+
+.wrapper h2 {
+    font-size: 1rem;
 }
