--- a/App/myapp/src/App.css
+++ b/App/myapp/src/App.css
@@ -113,11 +113,20 @@ link {
     margin-left: 60%;
 }
 .dropdown-menu.show{
-
+    padding-left: 10%;
+    padding-right: 10%;
     width: 400%;
-    padding-left: 50%;
-    padding-right: 40%;
 }
+
+@media screen and (max-width: 992px){
+    .dropdown-menu.show{
+        width: max-content;
+        margin-right: 160px;
+        padding-left: 10%;
+        padding-right: 10%;
+    }
+}
+
 .form-group{
     
     margin-top: 5%;
@@ -1198,9 +1207,6 @@ footer button:active{
 }
 
 /** Account Details **/
-.account-details-wrapper {
-    
-}
 
 .account-details-wrapper .container-reduced {
     margin: 0% 25%;
@@ -1284,6 +1290,7 @@ footer button:active{
     }
 
 }
+
 .experiences.battle {
     --header-stylized-background: url("../public/img/stylized-background1.svg");
     --body-stylized-background: url("../public/img/Battle_body.svg");
@@ -1295,19 +1302,23 @@ footer button:active{
 }
 
 .experiences .exp-header {
-    height: 1200px;
+    height: 100vh;
+    width: 100%;
+    padding: 0% 10% 0% 10%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
     background-image: var(--header-stylized-background);
     background-repeat: no-repeat;
     background-size: cover;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
     background-color: var(--bg-color);
     transition: background-color var(--animation-duration), background-image var(--animation-duration);
 }
 
 .experiences .exp-header .logo {
-    width: 10%;
+    width: 12.5%;
+    cursor: pointer;
 }
 
 .experiences .exp-header .logo.dark-logo {
@@ -1323,8 +1334,24 @@ footer button:active{
 }
 
 .experiences .exp-header .active {
-    width: 100%;
+    flex: 1 0 100%;
+    padding: 0% 10% 0% 10%;
+    margin-top: -10%;
 }
+
+
+@media screen and (max-width: 992px){
+
+    .experiences .exp-header .logo {
+        width: 20%;
+    }    
+    .experiences .exp-header .active {
+        flex: 1 0 100%;
+        padding: 0% 10% 0% 10%;
+        margin-top: -30%;
+    }
+}
+
 
 .experiences .wrapper {
     height: fit-content;
