--- a/App/myapp/src/App.css
+++ b/App/myapp/src/App.css
@@ -1637,3 +1637,27 @@ footer button:active{
 .wrapper h2 {
     font-size: 1rem;
 }
+
+.experiences h1 {
+    padding-top: 10%;
+}
+
+.experiences .order-1 {
+    order: 1 !important;
+    transition: var(--animation-duration);
+}
+
+.experiences .order-2 {
+    order: 2 !important;
+    transition: var(--animation-duration);
+}
+
+.experiences .order-3 {
+    order: 3 !important;
+    transition: var(--animation-duration);
+}
+
+.experiences .order-4 {
+    order: 4 !important;
+    transition: var(--animation-duration);
+}
