--- a/App/myapp/src/App.css
+++ b/App/myapp/src/App.css
@@ -335,7 +335,7 @@ link {
 
 .icon{  
     text-align: center;
-    font-family: Abel;
+    font-family: 'Abel';
     font-size: 25px;
     
 }
@@ -405,7 +405,7 @@ link {
     font-size: 20px;
     margin: 0%;
     margin-left: 2%;
-    font-family: Abel;
+    font-family: 'Abel';
     padding-top: 0%;
 }
 
@@ -425,7 +425,7 @@ link {
 
 .contentcard{
     font-size: 20px;
-    font-family: Abel;
+    font-family: 'Abel';
     margin-left: 2%;
 }
 
@@ -513,7 +513,7 @@ link {
 .faq-button p{
     font-size: 20px;
     color: #646363;
-    font-family: Abel;
+    font-family: 'Abel';
     text-align: left;
 }
 
@@ -648,14 +648,14 @@ link {
 .tab-left{
     text-align: center;
     display: grid;
-    font-family: Abel;
+    font-family: 'Abel';
     font-size: 20px;
 }
 
 .tab-middle{
     text-align: center;
     display: grid;
-    font-family: Abel;
+    font-family: 'Abel';
     font-size: 20px;
 }
 
@@ -687,7 +687,7 @@ link {
 .warn{
     text-decoration: none;
     color: #000;
-    font-family: Abel;
+    font-family: 'Abel';
 }
 
 .input-reservation{
@@ -706,7 +706,7 @@ link {
 
 .info-res h2{
     font-size: 40px !important ;
-    font-family: Abel;
+    font-family: 'Abel';
 }
 
 .info-res p{
@@ -727,7 +727,7 @@ link {
 
 .my-reserv{
     text-align: center;
-    font-family: Abel;
+    font-family: 'Abel';
     background-color: #000;
     color: white;
     margin-bottom: 5%;
@@ -831,9 +831,7 @@ link {
 
 
 .button-equipment{
-    padding-top: 10%;
     padding-bottom: 7%;
-
     text-align: center;
 }
 
@@ -931,7 +929,7 @@ link {
      
     .image-desc-equip p{
 
-        font-family: Abel;
+        font-family: 'Abel';
         font-size: 15px;
         
     }
@@ -942,7 +940,7 @@ link {
 }
 
 .title-equip p{
-    font-family: Abel;
+    font-family:'Abel';
 }
 
 .image-desc-equip{
@@ -962,7 +960,7 @@ link {
 }
 
 .image-desc-equip p{
-    font-family: Abel;
+    font-family: 'Abel';
 }
 
 /** ABOUT US **/
@@ -976,14 +974,15 @@ link {
     background-size: 100%;
     background-repeat: no-repeat;
     text-align: center;
+    position: relative;
+    z-index: 2;
 }
 
 .img-about img{
     color: white;
     width: 25%;
     padding-top: 10%;
-    position: relative;
-    z-index: 2;
+
 }
 
 .bryce-de-nice{
@@ -1017,20 +1016,20 @@ link {
 .perso{
     text-align: center;
     width: 100%;
-    font-family: Abel;
+    font-family: 'Abel';
 }
 
 .perso h2{
-    font-family: Abel;
+    font-family: 'Abel';
 }
 
 .perso h3{
     color: lightblue;
-    font-family: Abel;
+    font-family: 'Abel';
 }
 
 .perso h4{
-    font-family: Abel;
+    font-family: 'Abel';
     padding-left: 15%;
     padding-right: 15%;
 }
@@ -1230,7 +1229,7 @@ iframe{
 
 .maintaining-text h2{
     padding-top: 20%;
-    font-family: Abel;
+    font-family: 'Abel';
 }
 
 /** FOOTER **/
